--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -28,3 +28,6 @@ spring:
       pageable:
         default-page-size: 3
         max-page-size: 1000
+    redis:
+      host: localhost
+      port: 6379
