--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
       path: /h2-console
 
   datasource:
-    url: jdbc:h2:mem:multi-board
+    url: jdbc:h2:mem:multi-board;MODE=MySQL;DATABASE_TO_UPPER=false
     username: sa
     password:
     driver-class-name: org.h2.Driver
