--- a/.github/workflows/sonarcloud-analyze.yml
+++ b/.github/workflows/sonarcloud-analyze.yml
@@ -43,15 +43,4 @@ jobs:
           webhook: ${{ secrets.SLACK_WEBHOOK_URL }}
           webhook-type: incoming-webhook
           payload: |
-            {
-              "text": "message",
-              "blocks": [
-                {
-                 "type": "section",
-                    "type": "mrkdwn",
-                    "text": "SonarCloud Code Analyze"
-                }
-              ]
-            }
-
-
+            {"text":"Hello, World!"}
