--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,6 @@ sonar {
     properties {
         property 'sonar.host.url', 'https://sonarcloud.io'
         property 'sonar.organization', 'jammini'
-        property 'sonar.projectKey', 'jammini_multi-project'
+        property 'sonar.projectKey', 'Jammini_multi-board'
     }
 }
