--- a/front/package.json
+++ b/front/package.json
@@ -16,12 +16,14 @@
     "axios": "^1.7.8",
     "bootstrap": "^5.3.3",
     "element-plus": "^2.8.8",
+    "jwt-decode": "^4.0.0",
     "pinia": "^2.2.6",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.0",
+    "@types/jwt-decode": "^2.2.1",
     "@types/node": "^22.9.0",
     "@vitejs/plugin-vue": "^5.1.4",
     "@vitejs/plugin-vue-jsx": "^4.0.1",
