[refactor] 테스트 코드 수정

--- a/build.gradle
+++ b/build.gradle
@@ -54,3 +54,7 @@ sonar {
         property 'sonar.projectKey', 'Jammini_multi-board'
     }
 }
+
+test {
+    environment 'JWT_SECRET', 'your-secret-value'
+}
