--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -36,6 +36,17 @@ spring:
       max-file-size: 20MB
       max-request-size: 30MB
 
+  mail:
+    host: localhost
+    port: 25         # FakeSMTP 실행 포트
+    username: ""
+    password: ""
+    properties:
+      mail:
+        smtp:
+          auth: false
+          starttls:
+            enable: false
 
 logging:
   level:
