--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -61,3 +61,10 @@ file.dir: /Users/kimjungmin/documents/JM/project/img/
 
 jwt:
   secret: ${JWT_SECRET}
+
+mail:
+  reset-token:
+    redis-prefix: "pwd-reset:"
+    expiry-minutes: 30
+    resetUrl: "http://localhost:5173/password-reset/confirm/"
+
