[refactor] 서브 모듈 구조로 변경

--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,9 @@ allprojects {
     repositories {
         mavenCentral()
     }
+}
 
+subprojects {
     apply plugin: 'java'
     apply plugin: 'org.springframework.boot'
     apply plugin: 'io.spring.dependency-management'
