--- a/board-admin-server/src/main/resources/application.yml
+++ b/board-admin-server/src/main/resources/application.yml
@@ -1,2 +1,23 @@
 server:
   port: 8081
+
+spring:
+  datasource:
+    url: jdbc:h2:mem:board-admin-server;MODE=MySQL;DATABASE_TO_UPPER=false
+    username: sa
+    password:
+    driver-class-name: org.h2.Driver
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
+
+  jpa:
+    hibernate:
+      ddl-auto: create
+    properties:
+      hibernate.format_sql: true
+      hibernate.show_sql: true
+
+jwt:
+  secret: ${JWT_SECRET}
