--- a/board-admin-client/package.json
+++ b/board-admin-client/package.json
@@ -19,6 +19,7 @@
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
+    "@tsconfig/node22": "^22.0.2",
     "@types/node": "^24.0.0",
     "@vitejs/plugin-vue": "^5.2.3",
     "@vue/tsconfig": "^0.7.0",
