--- a/board-client/package.json
+++ b/board-client/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "axios": "^1.7.8",
     "bootstrap": "^5.3.3",
+    "date-fns": "^4.1.0",
     "element-plus": "^2.8.8",
     "jwt-decode": "^4.0.0",
     "pinia": "^2.2.6",
