[refactor] 코파일럿 코드리뷰 적용

--- a/board-server/src/main/resources/application.yml
+++ b/board-server/src/main/resources/application.yml
@@ -50,4 +50,7 @@ app:
     reset-url: "${app.frontend.base-url}/password-reset/confirm/"
   file:
     dir: "${user.dir}/uploads/files"
+  internal:
+    auth:
+      secret: "${INTERNAL_SECRET}"
 
