--- a/board-admin-client/package.json
+++ b/board-admin-client/package.json
@@ -12,10 +12,12 @@
     "@vitejs/plugin-vue-jsx": "^4.2.0",
     "axios": "^1.9.0",
     "bootstrap": "^5.3.6",
+    "echarts": "^5.6.0",
     "element-plus": "^2.10.1",
     "jwt-decode": "^4.0.0",
     "pinia": "^3.0.3",
     "vue": "^3.5.13",
+    "vue-echarts": "^7.0.3",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
