--- a/board-server/src/main/resources/application-dev.yml
+++ b/board-server/src/main/resources/application-dev.yml
@@ -20,3 +20,39 @@ spring:
       hibernate.format_sql: true
       hibernate.show_sql: true
       hibernate.dialect: org.hibernate.dialect.MySQL8Dialect
+
+resilience4j.circuitbreaker:
+  configs:
+    default:
+      slidingWindowType: COUNT_BASED
+      minimumNumberOfCalls: 7                                   # 최소 7번까지는 무조건 CLOSE로 가정하고 호출한다.
+      slidingWindowSize: 10                                     # (minimumNumberOfCalls 이후로는) 10개의 요청을 기준으로 판단한다.
+      waitDurationInOpenState: 10s                              # OPEN 상태에서 HALF_OPEN으로 가려면 얼마나 기다릴 것인가?
+
+      failureRateThreshold: 40                                  # slidingWindowSize 중 몇 %가 recordException이면 OPEN으로 만들 것인가?
+
+      slowCallDurationThreshold: 3000                           # 몇 ms 동안 요청이 처리되지 않으면 실패로 간주할 것인가?
+      slowCallRateThreshold: 60                                 # slidingWindowSize 중 몇 %가 slowCall이면 OPEN으로 만들 것인가?
+
+      permittedNumberOfCallsInHalfOpenState: 5                  # HALF_OPEN 상태에서 5번까지는 CLOSE로 가기위해 호출한다.
+      automaticTransitionFromOpenToHalfOpenEnabled: true        # OPEN 상태에서 자동으로 HALF_OPEN으로 갈 것인가?
+
+      eventConsumerBufferSize: 10                               # actuator를 위한 이벤트 버퍼 사이즈
+
+      recordExceptions: # Redis/인프라 관련 예외들을 기록한다.
+        - io.lettuce.core.RedisCommandTimeoutException
+        - io.lettuce.core.RedisConnectionException
+        - io.lettuce.core.RedisException
+        - org.springframework.data.redis.RedisConnectionFailureException
+        - org.springframework.data.redis.RedisSystemException
+        - java.net.SocketTimeoutException
+        - java.net.ConnectException
+        - java.net.UnknownHostException
+
+      ignoreExceptions: # 도메인/검증/비즈니스 예외는 무시 (서킷에 영향 X)
+        - study.multiproject.post.exception.PostNotFoundException
+        - study.multiproject.post.exception.SecretPostException
+        - java.lang.IllegalArgumentException
+  instances:
+    CircuitBreakerConfig:
+      baseConfig: default
