--- a/board-server/build.gradle
+++ b/board-server/build.gradle
@@ -33,6 +33,8 @@ dependencies {
     implementation "io.github.resilience4j:resilience4j-spring-boot3:2.2.0"
     implementation "org.springframework.boot:spring-boot-starter-actuator"
     implementation "org.springframework.boot:spring-boot-starter-aop"
+    implementation "org.springframework.boot:spring-boot-starter-cache"
+    implementation "com.github.ben-manes.caffeine:caffeine:3.2.2"
     implementation 'com.github.codemonstur:embedded-redis:1.4.3'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
