[env] 프로메테우스 + 그라파나 셋팅

--- a/board-server/src/main/resources/application-dev.yml
+++ b/board-server/src/main/resources/application-dev.yml
@@ -56,3 +56,12 @@ resilience4j.circuitbreaker:
   instances:
     CircuitBreakerConfig:
       baseConfig: default
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,info,metrics,prometheus
+  endpoint:
+    health:
+      show-details: always
