--- a/.github/workflows/board-client-build-and-push.yml
+++ b/.github/workflows/board-client-build-and-push.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Build and Push
         uses: docker/build-push-action@v4
         with:
-          context: ./board-client
+          context: .
           file: ./board-client/Dockerfile
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/board-client:${{ github.sha }}
