--- a/.github/workflows/board-admin-server-build-and-push.yml
+++ b/.github/workflows/board-admin-server-build-and-push.yml
@@ -30,5 +30,34 @@ jobs:
           context: .
           file: ./board-admin-server/Dockerfile
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/board-admin-server:${{ github.sha }}
+          tags: |
+            ${{ secrets.DOCKERHUB_USERNAME }}/board-admin-server:latest
+            ${{ secrets.DOCKERHUB_USERNAME }}/board-admin-server:${{ github.sha }}
           platforms: linux/amd64,linux/arm64
+
+      - name: Deploy to EC2
+        uses: appleboy/ssh-action@v1.0.3
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USERNAME }}
+          key: ${{ secrets.EC2_SSH_KEY }}
+          script: |
+            # Pull latest image
+            docker pull ${{ secrets.DOCKERHUB_USERNAME }}/board-admin-server:latest
+
+            # Stop and remove existing container
+            docker stop board-admin-server || true
+            docker rm board-admin-server || true
+
+            # Run new container
+            docker run -d \
+              --name board-admin-server \
+              --network app-network \
+              -p 8081:8080 \
+              -e SPRING_PROFILES_ACTIVE=local \
+              -e JWT_SECRET="${JWT_SECRET}" \
+              --restart unless-stopped \
+              ${{ secrets.DOCKERHUB_USERNAME }}/board-admin-server:latest
+
+            # Clean up old images
+            docker image prune -f
