--- a/.github/workflows/board-client-build-and-push.yml
+++ b/.github/workflows/board-client-build-and-push.yml
@@ -30,5 +30,32 @@ jobs:
           context: .
           file: ./board-client/Dockerfile
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/board-client:${{ github.sha }}
+          tags: |
+            ${{ secrets.DOCKERHUB_USERNAME }}/board-client:latest
+            ${{ secrets.DOCKERHUB_USERNAME }}/board-client:${{ github.sha }}
           platforms: linux/amd64,linux/arm64
+
+      - name: Deploy to EC2
+        uses: appleboy/ssh-action@v1.0.3
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USERNAME }}
+          key: ${{ secrets.EC2_SSH_KEY }}
+          script: |
+            # Pull latest image
+            docker pull ${{ secrets.DOCKERHUB_USERNAME }}/board-client:latest
+
+            # Stop and remove existing container
+            docker stop board-client || true
+            docker rm board-client || true
+
+            # Run new container
+            docker run -d \
+              --name board-client \
+              --network app-network \
+              -p 80:80 \
+              --restart unless-stopped \
+              ${{ secrets.DOCKERHUB_USERNAME }}/board-client:latest
+
+            # Clean up old images
+            docker image prune -f
