[env] 변경된 브랜치 이름을 main으로 업데이트

--- a/.github/workflows/board-admin-client-build-and-push.yml
+++ b/.github/workflows/board-admin-client-build-and-push.yml
@@ -3,7 +3,7 @@ name: board-admin-client-build-and-push
 on:
   push:
     branches:
-      - multi-board-67
+      - main
     paths:
       - 'board-admin-client/**'
 
