--- a/.github/workflows/board-client-build-and-push.yml
+++ b/.github/workflows/board-client-build-and-push.yml
@@ -3,7 +3,7 @@ name: board-client-build-and-push
 on:
   push:
     branches:
-      - multi-board-67
+      - main
     paths:
       - 'board-client/**'
 
