[env] update build context

--- a/.github/workflows/board-admin-client-build-and-push.yml
+++ b/.github/workflows/board-admin-client-build-and-push.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Build and Push
         uses: docker/build-push-action@v4
         with:
-          context: .
+          context: ./board-admin-client
           file: ./board-admin-client/Dockerfile
           push: true
           tags: |
